--- a/package.json
+++ b/package.json
@@ -8,10 +8,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.0",
     "axios": "^0.24.0",
+    "is-empty": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.0.5",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.21.0",
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
