--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "12.0.5",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
+    "react-data-table-component": "^7.4.5",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.21.0",
     "react-icons": "^4.3.1",
