--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.21.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
+    "react-select": "^5.2.1",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1"
