--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "jsonwebtoken": "^8.5.1",
     "next": "12.0.5",
     "prop-types": "^15.7.2",
+    "quill": "^1.3.7",
     "react": "17.0.2",
     "react-data-table-component": "^7.4.5",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.21.0",
     "react-icons": "^4.3.1",
+    "react-quill": "^1.3.5",
+    "react-quilljs": "^1.2.17",
     "react-redux": "^7.2.6",
     "react-select": "^5.2.1",
     "redux": "^4.1.2",
