--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^4.1.17",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
+    "multiselect-react-dropdown": "^2.0.17",
     "next": "12.0.5",
     "prop-types": "^15.7.2",
     "quill": "^1.3.7",
