--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "quill": "^1.3.7",
     "react": "17.0.2",
     "react-data-table-component": "^7.4.5",
+    "react-datetime-picker": "^3.4.3",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.21.0",
     "react-icons": "^4.3.1",
