--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "framer-motion": "^4.1.17",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "multiselect-react-dropdown": "^2.0.17",
     "next": "12.0.5",
     "prop-types": "^15.7.2",
     "quill": "^1.3.7",
     "react": "17.0.2",
     "react-data-table-component": "^7.4.5",
+    "react-datetime": "^3.1.1",
     "react-datetime-picker": "^3.4.3",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.21.0",
