--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "quill": "^1.3.7",
     "react": "17.0.2",
     "react-data-table-component": "^7.4.5",
+    "react-datepicker": "^4.6.0",
     "react-datetime": "^3.1.1",
     "react-datetime-picker": "^3.4.3",
     "react-dom": "17.0.2",
@@ -34,6 +35,7 @@
     "react-quilljs": "^1.2.17",
     "react-redux": "^7.2.6",
     "react-select": "^5.2.1",
+    "react-timekeeper": "^2.2.1",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
