--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.6.0",
     "@hookform/error-message": "^2.0.0",
     "@popperjs/core": "^2.11.0",
+    "apexcharts": "^3.33.1",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
@@ -24,6 +25,7 @@
     "prop-types": "^15.7.2",
     "quill": "^1.3.7",
     "react": "17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-data-table-component": "^7.4.5",
     "react-datepicker": "^4.6.0",
     "react-datetime": "^3.1.1",
