--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^7.2.6",
     "react-select": "^5.2.1",
     "react-timekeeper": "^2.2.1",
+    "react-timer-hook": "^3.0.5",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
